--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.2.1",
+        "recoil": "^0.7.7",
         "shadcn-ui": "^0.8.0"
     },
     "devDependencies": {
