--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-tabs": "^1.0.4",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.383.0",
         "next": "14.2.3",
         "react": "^18",
         "react-dom": "^18",
@@ -16,7 +20,9 @@
         "react-slick": "^0.30.2",
         "recoil": "^0.7.7",
         "shadcn-ui": "^0.8.0",
-        "slick-carousel": "^1.8.1"
+        "slick-carousel": "^1.8.1",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20",
