--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
 
     steps:
       - name: Call Vercel Deploy Hook
-        run: curl -X POST ${{ secrets.VERCEL_DEPLOY_HOOK_URL }}
+        run: curl -X POST ${{VERCEL_DEPLOY_HOOK_URL}}
