--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,20 @@
-name: Deploy to Vercel using Deploy Hook
+name: Deploy to Vercel
 
 on:
   schedule:
-    - cron: "0 */4 * * *" # 매 4시간마다 실행
-  workflow_dispatch:
+    - cron: "0 */4 * * *" # Every 4 hours
   push:
     branches:
-      - main # main 브랜치에 푸시될 때 실행
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Call Vercel Deploy Hook
-        run: curl -X POST ${{ secrets.VERCEL_DEPLOY_HOOK_URL }}
+      - name: Check out the repository
+        uses: actions/checkout@v2
+
+      - name: Trigger Vercel Deploy Hook
+        env:
+          VERCEL_DEPLOY_HOOK_URL: ${{ secrets.VERCEL_DEPLOY_HOOK_URL }}
+        run: curl -X POST $VERCEL_DEPLOY_HOOK_URL
