--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.2.1",
+        "react-router-dom": "^6.23.1",
         "react-slick": "^0.30.2",
         "recoil": "^0.7.7",
         "shadcn-ui": "^0.8.0",
